# mic-status-overlay

./: README.md  biome.json  index.html  package.json
.github/workflows/: build.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
