[package]
name = "mic-status-overlay"
version = "0.1.0"
description = "A Tauri App"
authors = ["MizuYaYa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mic_status_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"

[dependencies.windows]
version = "0.48"
features = ["Win32_System_Com", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints",  "Win32_Foundation", "Win32_System_Com_StructuredStorage", "Win32_UI_WindowsAndMessaging"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
